src/code/code-block.css
:root {
  --cb-bg: var(--color-gray-100);
  --cb-line-number: var(--color-gray-400);
  --cb-scrollbar: var(--color-gray-300);
  --cb-section-expander-active: var(--color-blue-500);
  --cb-section-expander-focused: var(--color-gray-500);
  --cb-section-expander: var(--color-gray-300);
  --cb-selection: rgb(from var(--color-blue-400) r g b / 25%);
  --cb-title-code-bg: var(--color-gray-100);
  --cb-whitespace: var(--color-gray-400);
}
@media (prefers-color-scheme: dark) {
  :root {
    --cb-bg: var(--color-gray-900);
    --cb-line-number: var(--color-gray-600);
    --cb-scrollbar: var(--color-gray-700);
    --cb-section-expander-active: var(--color-blue-500);
    --cb-section-expander-focused: var(--color-gray-500);
    --cb-section-expander: var(--color-gray-700);
    --cb-selection: rgb(from var(--color-blue-500) r g b / 25%);
    --cb-title-code-bg: var(--color-gray-700);
    --cb-whitespace: var(--color-gray-600);
  }
}

.prose .cb-frame {
  margin-block: calc(var(--spacing) * 6);
}
.cb-frame.not-prose,
.not-prose .cb-frame {
  margin-block: 0;
}

/* inline code inside titles */
.cb-title code {
  border-radius: var(--radius-sm);
  background-color: var(--cb-title-code-bg);
  padding-inline: 0.4em;
  padding-block: 0.2em;
  font-size: var(--text-sm);
}

.cb {
  position: relative;
  background-color: var(--cb-bg);
  padding: calc(var(--spacing) * 3) calc(var(--spacing) * 4)
    calc(var(--spacing) * 3) 0;
  overflow-x: auto;
  overflow-y: clip;
  tab-size: 2;
}

/* nothing but code lines should be selectable */
.cb,
.cb * {
  user-select: none;
}
.cb-l,
.cb-l * {
  user-select: text;
}

/* selection color */
.cb::selection,
.cb *::selection {
  background-color: var(--cb-selection);
}

/* line numbers and code */
:is(.cb-sc, .cb-sx) {
  display: flex;
  position: relative;
}
.cb-ln {
  display: none;
  position: sticky;
  left: 0;
  flex-shrink: 0;
  margin-right: calc(-1 * calc(var(--spacing) * 4));
  background-color: var(--cb-bg);
  padding-right: calc(var(--spacing) * 6);
  padding-left: calc(var(--spacing) * 4);
  width: calc(
    calc(var(--spacing) * 4) + var(--cb-w) + calc(var(--spacing) * 6)
  );
  color: var(--cb-line-number);
  text-align: right;
}
.cb-ln-s .cb-ln {
  display: block;
}
.cb code {
  flex-grow: 1;
  padding: 0 calc(var(--spacing) * 4);
}

/* scrollbar */
@supports (scrollbar-color: auto) {
  .cb {
    scrollbar-color: var(--cb-scrollbar) transparent;
  }
}
@supports selector(::-webkit-scrollbar) {
  .cb::-webkit-scrollbar-thumb {
    border-radius: calc(infinity * 1px);
    background-color: var(--cb-scrollbar);
  }
  .cb::-webkit-scrollbar {
    background-color: transparent;
    height: calc(var(--spacing) * 2);
  }
}

/* whitespace rendering */
.cb-s,
.cb-t {
  position: relative;
}
:is(.cb-s, .cb-t)::before {
  position: absolute;
  color: transparent;
}
/* hack to fix weird Safari text highlight gaps */
:is(.cb-s, .cb-t)::before {
  left: -100px;
  transform: translateX(100px);
}
.cb-s::before {
  content: "\0000B7"; /* middle dot */
}
.cb-t::before {
  content: "\002192"; /* right arrow */
}
:is(.cb-s, .cb-t).selected::before {
  color: var(--cb-whitespace);
}

/* section expander */
.cb-sh {
  display: block;
  position: sticky;
  left: 0;
  cursor: pointer;
  padding-left: calc(var(--spacing) * 4);
  color: var(--cb-section-expander);
}
.cb-sh *:focus,
.cb-sh *:focus-visible {
  outline: none;
}
.cb-sh:has(:focus-visible) :is(.cb-sh-h, .cb-sh-s)::before {
  @apply focus-outline;
}
.cb-sh:hover,
.cb-sh:has(:focus-visible) {
  color: var(--cb-section-expander-focused);
}
.cb-sh:active {
  color: var(--cb-section-expander-active);
}
.cb-sh input {
  position: absolute;
  appearance: none;
  width: 0;
  height: 0;
}
.cb-sh-h,
.cb-sh-s {
  display: flex;
  align-items: center;
  gap: calc(var(--spacing) * 2);
  height: calc(var(--spacing) * 7);
}
:is(.cb-sh-h, .cb-sh-s)::before {
  border-radius: var(--radius-xs);
  content: "(\0000B7\0000B7\0000B7)"; /* three middle dots in parentheses */
}
:is(.cb-sh:hover, .cb-sh:has(:focus-visible)) .cb-sh-h::before {
  content: "(Show less)";
}
:is(.cb-sh:hover, .cb-sh:has(:focus-visible)) .cb-sh-s::before {
  content: "(Show more)";
}
:is(.cb-sh-h, .cb-sh-s)::after {
  flex-grow: 1;
  border-top: 1px solid currentColor;
  content: "";
}
/* switch the show and hide content depending on expanded status */
.cb-sh-h {
  display: none;
}
.cb-sh:has(:checked) .cb-sh-h {
  display: flex;
}
.cb-sh:has(:checked) .cb-sh-s {
  display: none;
}
/* hide line numbers and indent when neither section context is expanded */
.cb[data-s]:not(:has(.cb-sh :checked)) :is(.cb-ln, .cb-sc-i) {
  display: none;
}
/* hide section context until expanded */
.cb-sx {
  display: none;
}
.cb:has(.cb-sh-b :checked) .cb-sx-b,
.cb:has(.cb-sh-a :checked) .cb-sx-a {
  display: flex;
}

